# boundary

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  dist-workspace.toml  prd.md  release-please-config.json  renovate.json
crates/boundary/: Cargo.toml
crates/boundary-core/: Cargo.toml
crates/boundary-core/src/: analyzer.rs  cache.rs  config.rs  custom_rules.rs  evolution.rs  forensics.rs  graph.rs  layer.rs  lib.rs  metrics.rs  metrics_report.rs  pattern_detection.rs  pipeline.rs  rule_filter.rs  types.rs
crates/boundary-go/: Cargo.toml
crates/boundary-go/src/: lib.rs
crates/boundary-java/: Cargo.toml
crates/boundary-java/src/: lib.rs
crates/boundary-lsp/: Cargo.toml
crates/boundary-lsp/src/: main.rs  server.rs
crates/boundary-lsp/tests/: protocol_test.rs
crates/boundary-report/: Cargo.toml
crates/boundary-report/src/: diagram.rs  dot.rs  forensics.rs  json.rs  lib.rs  markdown.rs  text.rs
crates/boundary-rust/: Cargo.toml
crates/boundary-rust/src/: lib.rs
crates/boundary-typescript/: Cargo.toml
crates/boundary-typescript/src/: lib.rs
crates/boundary/src/: main.rs
crates/boundary/tests/: active_record_test.rs  configurable_layer_patterns_test.rs  cross_cutting_exclusions_test.rs  custom_violation_rules_test.rs  diagram_test.rs  discovery_test.rs  go_adapter_detection_test.rs  hybrid_architecture_test.rs  init_function_coupling_test.rs  integration_test.rs  layer_conformance_test.rs  markdown_report_test.rs  monorepo_multi_service_test.rs  pa002_test.rs  pa003_test.rs  pattern_detection_test.rs  progress_tracking_test.rs  rcm_package_metrics_test.rs  rule_config_test.rs  rule_id_test.rs  smoke_test.rs  unclassified_component_handling_test.rs  validation_test.rs  zone_detection_test.rs
crates/boundary/tests/fixtures/adapters-override/: .boundary.toml
crates/boundary/tests/fixtures/adapters-override/adapters/: user_repo.go
crates/boundary/tests/fixtures/flat-go-module/: user.go
crates/boundary/tests/fixtures/fr-go-adapters/application/: handler.go
crates/boundary/tests/fixtures/fr-go-adapters/domain/: ports.go
crates/boundary/tests/fixtures/fr-go-adapters/infrastructure/: mongo_repo.go  webhook.go
crates/boundary/tests/fixtures/fr-go-adapters/infrastructure/cycle/: provider.go
crates/boundary/tests/fixtures/fr-go-adapters/infrastructure/stripe/: processor.go
crates/boundary/tests/fixtures/fr18-custom-layers/: .boundary.toml
crates/boundary/tests/fixtures/fr19-cross-cutting/: .boundary.toml
crates/boundary/tests/fixtures/fr19-cross-cutting/domain/: user.go
crates/boundary/tests/fixtures/fr19-cross-cutting/infrastructure/: repo.go
crates/boundary/tests/fixtures/fr19-cross-cutting/pkg/logger/: log.go
crates/boundary/tests/fixtures/fr20-active-record-permissive/: .boundary.toml
crates/boundary/tests/fixtures/fr20-active-record-permissive/infrastructure/db/: db.go
crates/boundary/tests/fixtures/fr20-active-record-strict/domain/: order.go
crates/boundary/tests/fixtures/fr21-init-coupling-disabled/: .boundary.toml
crates/boundary/tests/fixtures/fr21-init-coupling-disabled/domain/: setup.go
crates/boundary/tests/fixtures/fr21-init-coupling-disabled/infrastructure/: registry.go
crates/boundary/tests/fixtures/fr22-hybrid/: .boundary.toml
crates/boundary/tests/fixtures/fr23-unclassified/domain/: user.go
crates/boundary/tests/fixtures/fr23-unclassified/worker/: processor.go
crates/boundary/tests/fixtures/fr24-monorepo/: .boundary.toml
crates/boundary/tests/fixtures/fr24-monorepo-mixed/services/minimal/: main.go
crates/boundary/tests/fixtures/fr24-monorepo/shared/logger/: log.go
crates/boundary/tests/fixtures/fr7-custom-rules/: .boundary.toml
crates/boundary/tests/fixtures/fr7-custom-rules/domain/: user.go
crates/boundary/tests/fixtures/full-ddd-module/application/: service.go
crates/boundary/tests/fixtures/full-ddd-module/domain/: user.go
crates/boundary/tests/fixtures/full-ddd-module/infrastructure/: repo.go
crates/boundary/tests/fixtures/interface-coverage-project/domain/: ports.go
crates/boundary/tests/fixtures/interface-coverage-project/infrastructure/: repo.go
crates/boundary/tests/fixtures/no-exported-types/: internal.go
crates/boundary/tests/fixtures/no-go-files/: README.md
crates/boundary/tests/fixtures/pa002-port-without-impl/: go.mod
crates/boundary/tests/fixtures/pa003-concrete-constructor/: go.mod
crates/boundary/tests/fixtures/pattern-anemic-domain/domain/: domain.go
crates/boundary/tests/fixtures/pattern-anemic-domain/services/: service.go
crates/boundary/tests/fixtures/pattern-ddd-project/application/: service.go
crates/boundary/tests/fixtures/pattern-ddd-project/domain/: user.go
crates/boundary/tests/fixtures/pattern-ddd-project/infrastructure/: repo.go
crates/boundary/tests/fixtures/pattern-flat-crud/flat/: flat.go
crates/boundary/tests/fixtures/pattern-low-confidence/alpha/: alpha.go
crates/boundary/tests/fixtures/pattern-low-confidence/beta/: beta.go
crates/boundary/tests/fixtures/pattern-transition/domain/: domain.go
crates/boundary/tests/fixtures/pattern-transition/infrastructure/: repo.go
crates/boundary/tests/fixtures/rcm-ddd-project/application/: service.go
crates/boundary/tests/fixtures/rcm-ddd-project/domain/: user.go
crates/boundary/tests/fixtures/rcm-ddd-project/infrastructure/: repo.go
crates/boundary/tests/fixtures/rcm-empty-pkg/core/: service.go
crates/boundary/tests/fixtures/rcm-empty-pkg/empty/: internal.go
crates/boundary/tests/fixtures/rcm-isolated/util/: helper.go
crates/boundary/tests/fixtures/rcm-zone-of-pain/common/: util.go
crates/boundary/tests/fixtures/rcm-zone-of-pain/service_a/: service.go
crates/boundary/tests/fixtures/rcm-zone-of-pain/service_b/: service.go
crates/boundary/tests/fixtures/rcm-zone-of-uselessness/abstractions/: ports.go
crates/boundary/tests/fixtures/rcm-zone-of-uselessness/foundation/: base.go
crates/boundary/tests/fixtures/rule-config-override/: .boundary.toml
crates/boundary/tests/fixtures/sample-go-project/.boundary/: cache.json
(+81 files in other folders)
