[workspace]
resolver = "2"
members = [
  "crates/boundary",
  "crates/boundary-core",
  "crates/boundary-go",
  "crates/boundary-rust",
  "crates/boundary-typescript",
  "crates/boundary-java",
  "crates/boundary-report",
  "crates/boundary-lsp",
]

[workspace.package]
version = "0.10.2"
edition = "2021"
authors = ["Stephen Morgan"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rebelopsio/boundary"
homepage = "https://github.com/rebelopsio/boundary"
keywords = ["architecture", "ddd", "hexagonal", "static-analysis", "linter"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Core dependencies shared across crates
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# Tree-sitter
tree-sitter = "0.26"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"

# Graph and analysis
petgraph = "0.8"
walkdir = "2.5"
ignore = "0.4"
globset = "0.4"

# Async / LSP
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"

# Hashing
sha2 = "0.10"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"
rayon = "1.10"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

# Testing
tempfile = "3.14"

# Internal workspace crates (version required for crates.io publishing)
boundary-core = { path = "crates/boundary-core", version = "0.10.2" }
boundary-go = { path = "crates/boundary-go", version = "0.10.2" }
boundary-rust = { path = "crates/boundary-rust", version = "0.10.2" }
boundary-typescript = { path = "crates/boundary-typescript", version = "0.10.2" }
boundary-java = { path = "crates/boundary-java", version = "0.10.2" }
boundary-report = { path = "crates/boundary-report", version = "0.10.2" }
boundary-lsp = { path = "crates/boundary-lsp", version = "0.10.2" }

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
