[package]
name = "boundary-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, graph structures, and metrics for boundary"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
petgraph.workspace = true
tree-sitter.workspace = true
toml.workspace = true
globset.workspace = true
regex.workspace = true
chrono.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
