[package]
name = "boundary-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LSP server for boundary architecture analysis"

[[bin]]
name = "boundary-lsp"
path = "src/main.rs"

[dependencies]
boundary-core.workspace = true
boundary-go.workspace = true
boundary-rust.workspace = true
boundary-typescript.workspace = true
boundary-java.workspace = true

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
walkdir.workspace = true
